# fund

./: .gitignore  README.md  README2.md  pyproject.toml  run_live.py
.github/workflows/: deploy.yml
app/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css
app/src/components/: ConsoleShell.tsx  ConsoleTradeFeed.tsx  ErrorBoundary.tsx  Layout.tsx  Masthead.tsx  MemberList.tsx  MetricTile.tsx  MetricsPanel.tsx  NavChart.tsx  PodCard.tsx  PortfolioChart.tsx  PortfolioNotionalChart.tsx  Positions.tsx  PositionsTable.tsx  ThemeToggle.tsx  Ticker.tsx  TradeBlotter.tsx  TradesFeed.tsx  ui.tsx
app/src/data/: colors.ts  compute.ts  demo.ts  types.ts  useFund.ts
app/src/hooks/: useLiveSnapshots.ts  useMembers.ts  useMetrics.ts  useNavHistory.ts  usePods.ts  usePositions.ts  useRealtimeTrades.ts  useTrades.ts
app/src/lib/: backend.ts  metrics.ts  (+3 more)
app/supabase/: 003_trader_api_keys.sql  004_portfolio_accounting.sql
backend/: .env.example  README.md  railway.toml  requirements.txt
backend/app/: accounting.py  alpaca_client.py  auth.py  config.py  db.py  main.py  metrics.py  portal_auth.py  schemas.py
backend/scripts/: seed_users.py
docs/: ARCHITECTURE.md  RUNBOOK.md
package/: README.md  requirements.txt  setup.py
package/rqfc/: __init__.py  _session.py  account.py  admin.py  backtest.py  client.py  db.py  trading.py  utils.py
package/rqfc_dev.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: setup.py
test/rqfc/: account.py  db.py  market_data.py  metrics.py  trading.py
(+13 files in other folders)
